--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <li><a href="home.html">Home </a></li>
                 <li><a href="About.html">About Us</a></li>
                 <li><a href="Contact.html">Contact Us</a></li>
-                <li><a href="http://127.0.0.1:5500/web2/templates/result.html">Wind Prediction</a></li>
+                <li><a href="result.html">Wind Prediction</a></li>
             </ul>
         </nav>
     </header>
